--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -42,12 +42,12 @@ jobs:
 
       - name: Add EC2 instance to known hosts
         run: |
-          ssh-keyscan -H ${{ secrets.EC2_IP }} >> ~/.ssh/known_hosts
+          ssh-keyscan -H ${{ secrets.INSTANCE_IP }} >> ~/.ssh/known_hosts
 
       - name: Deploy to Minikube
         run: |
           scp -r kubernetes ubuntu@${{ secrets.EC2_IP }}:~/kubernetes
-          ssh ubuntu@${{ secrets.EC2_IP }} << 'EOF'
+          ssh ubuntu@${{ secrets.INSTANCE_IP }} << 'EOF'
           kubectl apply -f ~/kubernetes/secret.yaml
           kubectl apply -f ~/kubernetes/configmap.yaml
           kubectl apply -f ~/kubernetes/service.yaml
