--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -42,7 +42,12 @@ jobs:
 
       - name: Add EC2 instance to known hosts
         run: |
-          ssh-keyscan -H ${{ secrets.INSTANCE_IP }} >> ~/.ssh/known_hosts
+          # echo "Instance IP: ${{ secrets.INSTANCE_IP }}"
+          ssh-keyscan -H ${{ secrets.INSTANCE_IP }} >> ~/.ssh/known_hosts || true
+      
+      - name: Test SSH Connection
+        run: |
+          ssh -o StrictHostKeyChecking=no ec2-user@${{ secrets.INSTANCE_IP }} "echo Connection Successful"
 
       - name: Deploy to Minikube
         run: |
