updated secret key for server

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -51,7 +51,7 @@ jobs:
 
       - name: Deploy to Minikube
         run: |
-          scp -r kubernetes ubuntu@${{ secrets.EC2_IP }}:~/kubernetes
+          scp -r kubernetes ubuntu@${{ secrets.INSTANCE_IP }}:~/kubernetes
           ssh ubuntu@${{ secrets.INSTANCE_IP }} << 'EOF'
           kubectl apply -f ~/kubernetes/secret.yaml
           kubectl apply -f ~/kubernetes/configmap.yaml
